--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - devstack_postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
       interval: ${HEALTH_CHECK_INTERVAL}s
       timeout: ${HEALTH_CHECK_TIMEOUT}s
       retries: ${HEALTH_CHECK_RETRIES}
@@ -31,7 +31,7 @@ services:
     volumes:
       - devstack_mysql_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       interval: ${HEALTH_CHECK_INTERVAL}s
       timeout: ${HEALTH_CHECK_TIMEOUT}s
       retries: ${HEALTH_CHECK_RETRIES}
@@ -50,7 +50,7 @@ services:
     volumes:
       - devstack_mongodb_data:/data/db
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
       interval: ${HEALTH_CHECK_INTERVAL}s
       timeout: ${HEALTH_CHECK_TIMEOUT}s
       retries: ${HEALTH_CHECK_RETRIES}
@@ -65,7 +65,7 @@ services:
     volumes:
       - devstack_redis_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: ${HEALTH_CHECK_INTERVAL}s
       timeout: ${HEALTH_CHECK_TIMEOUT}s
       retries: ${HEALTH_CHECK_RETRIES}
@@ -85,7 +85,7 @@ services:
     volumes:
       - devstack_minio_data:/data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: ${HEALTH_CHECK_INTERVAL}s
       timeout: ${HEALTH_CHECK_TIMEOUT}s
       retries: ${HEALTH_CHECK_RETRIES}
@@ -101,14 +101,16 @@ services:
     environment:
       JUPYTER_ENABLE_LAB: "yes"
       GRANT_SUDO: "yes"
-    command: start-notebook.sh --NotebookApp.token=${JUPYTER_TOKEN} --NotebookApp.password='' --NotebookApp.allow_origin='*'
+    command: start-notebook.sh --NotebookApp.token=${JUPYTER_TOKEN} --NotebookApp.password=${JUPYTER_PASSWORD} --NotebookApp.allow_origin='*'
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8888/api"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8888/api" ]
       interval: ${HEALTH_CHECK_INTERVAL}s
       timeout: ${HEALTH_CHECK_TIMEOUT}s
       retries: ${HEALTH_CHECK_RETRIES}
     networks:
       - devstack
+    volumes:
+      - ./jupyter_data:/home/jovyan/work
 
 volumes:
   devstack_postgres_data:
